# needGodnet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  app.py  app_cloud.py  app_evangelism.py  app_evangelism_enhanced.py  app_optimized.py  app_smart.py  deploy.sh  docker-compose.yml  env.example  push_to_github.sh  pyproject.toml  requirements.txt  run.py  setup_github.sh  test_app.py
.github/workflows/: ci.yml  release.yml
tests/: test_evangelism_enhanced.py
